styling main body and aligning the anglerfish image with the text

--- a/public/page.html
+++ b/public/page.html
@@ -9,10 +9,10 @@
 <body>
 
     <main>
-        <article >
+        <article class="ocean-story">
             <h1>The Unseen World of the Midnight Zone</h1>
             
-            <img src="images/anglerfish.jpeg" alt="Anglerfish in the deep sea" >
+            <img src="images/anglerfish.jpeg" alt="Anglerfish in the deep sea" class="story-image">
 
             <p>
                 In the black expanse below 1,000 meters lies the <b>Midnight Zone</b> (or bathypelagic zone), a realm where sunlight never reaches and temperatures hover just above freezing. 
