--- a/public/page.html
+++ b/public/page.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="site-header">
+        <img src="images/ocean-logo.png" alt="Wave Logo" class="header-image">
+        <h1>Guardians of the Deep</h1>
+        <p class="subtitle">Exploring the Largest Ecosystem on Earth</p>
+    </header>
 
     <main>
         <article class="ocean-story">
