--- a/public/page.html
+++ b/public/page.html
@@ -11,6 +11,16 @@
         <img src="images/ocean-logo.png" alt="Wave Logo" class="header-image">
         <h1>Guardians of the Deep</h1>
         <p class="subtitle">Exploring the Largest Ecosystem on Earth</p>
+
+        <nav class="main-nav">
+            <ul>
+                <li><a href="page.html">Home (Story)</a></li>
+                <li><a href="typography.html">Typography</a></li>
+                <li><a href="form.html">Contact/Form</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="column3.html">Gallery</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
