--- a/public/page.html
+++ b/public/page.html
@@ -75,6 +75,32 @@
         </footer>
     </main>
 
+    <footer class="site-footer triptych">
+        <div class="footer-section">
+            <h4>Essential References</h4>
+            <ul>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">MDN HTML Reference</a>
+                </li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">MDN CSS Reference</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h4>Code Validation</h4>
+            <ul>
+                <li><a href="https://validator.w3.org/nu/" target="_blank">HTML Validator</a></li>
+                <li><a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validator</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h4>Official Standards</h4>
+            <ul>
+                <li><a href="https://www.w3.org/TR/html5/" target="_blank">W3C HTML Standard</a></li>
+                <li><a href="https://www.w3.org/TR/CSS/" target="_blank">W3C CSS Standard</a></li>
+            </ul>
+        </div>
+    </footer>
+
 </body>
 
 </html>
