--- a/public/typography.html
+++ b/public/typography.html
@@ -16,9 +16,9 @@
 
         <nav class="main-nav">
             <ul>
-                <li><a href="page.html">Home (Story)</a></li>
+                <li><a href="page.html">Home</a></li>
                 <li><a href="typography.html">Typography</a></li>
-                <li><a href="form.html">Contact/Form</a></li>
+                <li><a href="form.html">Subscription</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="column3.html">Gallery</a></li>
             </ul>
