--- a/public/typography.html
+++ b/public/typography.html
@@ -26,7 +26,33 @@
     </header>
 
     <main>
+        <div class="typography-main-content">
 
+            <h1>The Ocean's Typeface: Styling for Depth</h1>
+            <p>The grid is imported but not activated. This should be pure browser style and it randomly matches the
+                default grid.</p>
+            <p>No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not
+                know how to pursue pleasure rationally encounter consequences that are extremely painful.</p>
+
+            <!-- checking headers -->
+            <h2>Header Level 2: Sub-Oceanic Zones</h2>
+            <p>Checking that single header works. No one rejects, dislikes, or avoids pleasure itself, because it is
+                pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences
+                that are extremely painful.</p>
+
+            <h3>Header Level 3: Adaptation and Resilience</h3>
+
+            <h4>Header Level 4: The Abyssal Plain</h4>
+
+            <h5>Header Level 5: Unique Challenges</h5>
+            <p>But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying
+                consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+
+            <h6>Header Level 6: Marine Facts</h6>
+            <p>These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is
+                untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be
+                welcomed and every pain avoided.</p>
+        </div>
     </main>
 
     <footer class="site-footer triptych">
