--- a/public/typography.html
+++ b/public/typography.html
@@ -52,6 +52,54 @@
             <p>These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is
                 untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be
                 welcomed and every pain avoided.</p>
+
+            <!-- Text Emphasis and Formatting -->
+            <hr>
+
+            <p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis
+                egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero
+                sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo.
+                Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed,
+                <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum,
+                eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis
+                pulvinar facilisis. Ut felis.
+            </p>
+
+            <p>This is <strong>bold and strong text</strong>. No one rejects, <b>dislikes</b>, or avoids pleasure
+                itself.</p>
+            <p>This is <em>italic emphased text</em>. No one rejects, <i>dislikes</i>, or avoids pleasure itself.</p>
+
+            <p>This is <mark>a marked sentence</mark> to highlight important text related to conservation.</p>
+
+            <p>There can be sup <sup>1, 2</sup> (superscript) and sub <sub>1, 2</sub> (subscript) that can be nice to
+                use.</p>
+
+            <p><small>Here comes text that is <b>smaller and keeping standard lineheight</b>.</small></p>
+
+            <p>Here comes som <code>function exploreDeepSea();</code> codish style for technical notes.</p>
+            <p>This is text formatted as <kbd>keyboard input</kbd> for interaction commands.</p>
+            <p>This is text formatted as <samp>sample output from command</samp> from a research submersible.</p>
+
+            <p><dfn title="Deep Sea Exploratory Vehicle">DSEV</dfn> is a specialized submersible for deep exploration.
+                Hoover to see its definition.</p>
+            <p>The <abbr title="Oceanic Research and Exploration">ORE</abbr> organization was founded in 1948. Hoover to
+                see the abbrevation spelled out.</p>
+
+            <!-- Blockquote -->
+            <h2>Quote and Preformatted Text</h2>
+            <blockquote>"The sea is the universal sewer, yet it remains the fountain of life."
+                <cite>-- Jacques-Yves Cousteau</cite>
+            </blockquote>
+            <p>To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some
+                advantage from it?</p>
+
+            <!-- Preformatted Text -->
+            <pre>
+#header h1 a {
+    display: block;
+    width: 300px;
+    height: 80px;
+}</pre>
         </div>
     </main>
 
