Adding tables and lists

--- a/public/typography.html
+++ b/public/typography.html
@@ -100,6 +100,75 @@
     width: 300px;
     height: 80px;
 }</pre>
+            <!-- Lists -->
+            <h2>Lists: Unordered and Ordered</h2>
+            <ul>
+                <li>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in,
+                    diam. Sed arcu. Cras consequat.</li>
+                <li>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu
+                    erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus,
+                    metus.</li>
+                <li>Phasellus ultrices nulla quis nibh. Quisque a lectus. Donec consectetuer ligula vulputate sem
+                    tristique cursus. Nam nulla quam, gravida non, commodo a, sodales sit amet, nisi.</li>
+            </ul>
+            <ol>
+                <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+                <li>Aliquam tincidunt mauris eu risus.</li>
+                <li>Vestibulum auctor dapibus neque.</li>
+                <ol> <!-- Nested Ordered List -->
+                    <li>Aliquam tincidunt mauris eu risus (Nested).</li>
+                    <li>Vestibulum auctor dapibus neque. (Nested).</li>
+                </ol>
+            </ol>
+
+            <!-- Definition List -->
+            <h2>Definition Lists (DL)</h2>
+            <dl>
+                <dt>HTML Definition</dt>
+                <dd>Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. Defined by <i>Tim Berners-Lee</i></dd>
+                <dt>CSS Definition</dt>
+                <dd>Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML. 
+                    CSS describes how elements should be rendered on screen, on paper, in speech, or on other media. Defined by <i>Håkon Wium Lie</i>
+                </dd>
+            </dl>
+            <dl class="horizontal">
+                <dt>Horizontal Term</dt>
+                <dd>This is a definition that can optionally be formatted horizontally by CSS.</dd>
+            </dl>
+
+            <!-- Tables -->
+            <h2>Tabular Data: Research Samples</h2>
+            <table>
+                <caption>Table 0. Base formatted table</caption>
+                <thead>
+                    <tr>
+                        <th>Sample ID</th>
+                        <th>Depth (m)</th>
+                        <th>Species Found</th>
+                        <th>Temp. (C)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>A101</td>
+                        <td>3800</td>
+                        <td>Mariana Snailfish</td>
+                        <td>2.1</td>
+                    </tr>
+                    <tr>
+                        <td>B205</td>
+                        <td>5100</td>
+                        <td>Amphipod</td>
+                        <td>1.8</td>
+                    </tr>
+                    <tr>
+                        <td>C312</td>
+                        <td>4500</td>
+                        <td>Viperfish Larvae</td>
+                        <td>3.0</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </main>
 
