--- a/public/form.html
+++ b/public/form.html
@@ -57,7 +57,7 @@
                         <div class="form-group">
                             <label for="card-number">Card Number (16 Digits)</label>
                             <input type="number" id="card-number" name="card-number" inputmode="numeric"
-                                pattern="[0-9]{16}" minlength="16" maxlength="16" placeholder="16 digits (no spaces)" required>
+                                pattern="[0-9]{16}" minlength="16" maxlength="16" placeholder="0000 0000 0000 0000 (no spaces)" required>
                         </div>
 
                         <div class="split-group">
@@ -67,7 +67,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="cvv">CVV (3 Digits)</label>
-                                <input type="number" id="cvv" name="cvv" minlength="3" maxlength="3" placeholder="3 digits" required>
+                                <input type="number" id="cvv" name="cvv" minlength="3" maxlength="3" placeholder="000" required>
                             </div>
                         </div>
 
