added side coulmns and their styles

--- a/public/column3.html
+++ b/public/column3.html
@@ -26,8 +26,23 @@
     </header>
 
     <main class="three-column-layout">
+        <!-- Column 1: Left Aside -->
+        <aside class="three-col-aside aside-left">
+            <h3>Captain K: The Engineer</h3>
+            <img src="images/captain_k.png" alt="Profile of Captain K" class="aside-profile-img">
+            <p>
+                Captain K is the technical genius behind the *DSEV* submersible (Deep Sea Exploratory Vehicle). With a
+                background in aerospace engineering, K ensures the team's equipment can withstand the astronomical
+                pressures of the abyssal zone.
+            </p>
+            <p>
+                K's work is vital for mission success, managing the complex array of sensors, deep-sea cameras, and
+                robotic manipulators. K's focus is on sustainable engineering, constantly optimizing power systems to
+                leave the smallest possible environmental footprint.
+            </p>
+        </aside>
 
-        <!-- Column 2: Center Main (Widest Column - Captain Ashkar & Team Story) -->
+        <!-- Column 2: Center Main -->
         <section class="three-col-main">
             <div class="captain-profile">
                 <img src="images/captain_ashkar.png" alt="Captain Ashkar Profile Image" class="captain-img">
@@ -53,7 +68,7 @@
 
             <img src="images/guardians.png" alt="Guardians of the Deep Team Photo" class="team-image">
             <ul>
-                <li><strong>Captain Ashkar:</strong> Strategy, History, and Dive Operations.</li>
+                <li><strong>Captain Ashkar:</strong> Leader, Strategy, History, and Dive Operations.</li>
                 <li><strong>Captain A:</strong> Acoustics, Cartography, and Navigation.</li>
                 <li><strong>Captain K:</strong> Submersible Engineering, Robotics, and Power Systems.</li>
             </ul>
@@ -66,6 +81,21 @@
                 <a href="https://soundcloud.com/your-soundcloud-profile" target="_blank">SoundCloud</a>
             </div>
         </section>
+        <!-- Column 3: Right Aside -->
+        <aside class="three-col-aside aside-right">
+            <h3>Captain A: The Navigator</h3>
+            <img src="images/captain_a.png" alt="Profile of Captain A" class="aside-profile-img">
+            <p>
+                Captain A is the team's expert in deep-sea acoustics and cartography. A former researcher from a
+                government deep-ocean observatory, A specializes in mapping subtle shifts in water currents and
+                temperature anomalies.
+            </p>
+            <p>
+                Their role is crucial for tracking the migratory paths of the Midnight Zone fauna, ensuring the team's
+                research submersible never ventures into unstable hydrothermal vent systems. A's mantra: "Listen to the
+                silence; the ocean always speaks the truth."
+            </p>
+        </aside>
 
     </main>
 
