--- a/public/column3.html
+++ b/public/column3.html
@@ -32,7 +32,7 @@
             <h3>Captain K: The Engineer</h3>
             <img src="images/captain_k.png" alt="Profile of Captain K" class="aside-profile-img">
             <p>
-                Captain K is the technical genius behind the <I>DSEV</I> submersible (Deep Sea Exploratory Vehicle). With a
+                Captain K is the technical genius behind the <i>DSEV</i> submersible (Deep Sea Exploratory Vehicle). With a
                 background in aerospace engineering, K ensures the team's equipment can withstand the astronomical
                 pressures of the abyssal zone.
             </p>
