--- a/public/form.html
+++ b/public/form.html
@@ -29,7 +29,7 @@
     <main>
         <div class="payment-form-container">
             <h2>Deep-Sea Research Contribution</h2>
-            <p>Support our expedition to the Hadal Zone by securely submitting your contribution details below. <br>
+            <p>Support our expedition to the Hadal Zone by securely submitting your contribution details below.</p> <br>
 
                     <!-- action="#" makes the form submit to the same page, refreshing it. -->
                     <form action="#" method="post" class="donation-form">
