added instructions getting the project to work

--- a/public/column3.html
+++ b/public/column3.html
@@ -77,9 +77,9 @@
             <h4 class="social-header">Connect with the Strategist</h4>
             <!-- Container for centering and stacking links -->
             <div class="social-links">
-                <a href="https://github.com/your-github-profile" target="_blank">GitHub Profile</a>
-                <a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a>
-                <a href="https://soundcloud.com/your-soundcloud-profile" target="_blank">SoundCloud</a>
+                <a href="https://github.com/ashkar99" target="_blank">GitHub Profile</a>
+                <a href="https://www.linkedin.com/in/sadek-a-468603314/" target="_blank">LinkedIn</a>
+                <a href="https://soundcloud.com/sadek-ashkar?ref=clipboard&p=a&c=1&si=1d8d6c7f94434575993fcd186a325a5a&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">SoundCloud</a>
             </div>
         </section>
         <!-- Column 3: Right Aside -->
